fix background color for dark mode, got rid of background color for heading, fix hero section spacing and text for light and dakr mode

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 
 /* Dark Mode */
 body.dark {
-  @apply bg-gray-800 text-white;
+  @apply bg-gray-900 text-white;
 }
 
 @keyframes App-logo-spin {
